changed group ID